text to speech added. among with the sounds settings

--- a/landing/templates/layout.html
+++ b/landing/templates/layout.html
@@ -22,9 +22,9 @@
         <div class="font-nav">
             <a href="{% url 'speech_to_text' %}">SPEECH TO TEXT</a>  
         </div>
-        <div class="font-nav">
+        <!-- <div class="font-nav">
             <a href="{% url 'file_to_speech' %}">FILE TO SPEECH</a>  
-        </div>
+        </div> -->
         <div class="font-nav">
             <a href="{% url 'contato' %}">CONTATO</a>  
         </div>
@@ -71,7 +71,7 @@
                 <a href="{% url 'home' %}">Home</a>
                 <a href="{% url 'text_to_speech' %}">Text to Speech</a>
                 <a href="{% url 'speech_to_text' %}">Speech to Text</a>
-                <a href="{% url 'file_to_speech' %}">File to Speech</a>
+                <!-- <a href="{% url 'file_to_speech' %}">File to Speech</a> -->
                 <a href="{% url 'contato' %}">Contato</a>
             </div>
         </footer>
