--- a/speech_to_text/templates/speech_to_text.html
+++ b/speech_to_text/templates/speech_to_text.html
@@ -18,10 +18,13 @@
         <div class="mainWrap">
                 <h2>Seepch Recognition</h2>
                 <div>
-                        <textarea id="textarea" rows="10" cols="80" disabled="true" style="resize: none;" ></textarea>
+                        <textarea id="textarea-stt" rows="10" cols="80" disabled="true" style="resize: none;" ></textarea>
                         <!-- <br> -->
                         <button class="click-to" id="buttonSpeech" onclick="toggleStartStop()" ></button>
-                        <button class="click-to" id="buttonListen" onclick="listen()" >Clique para Ouvir</button>
+                        <h2>Reprodução</h2>
+                        <label id="rateValue">Velocidade 1</label> <input id="rate" type="range" min="0.1" max="2" step="0.1" value="1" />
+                        <label id="pitchValue">Tonalidade 1</label> <input id="pitch" type="range" min="0.1" max="2" step="0.1" value="1" />
+                        <button class="click-to" id="buttonListen" onclick="listen('textarea-stt')" >Clique para Ouvir</button>
                 </div>
         </div>
 
