add others speakers in text to speech tool

--- a/landing/static/css/style.css
+++ b/landing/static/css/style.css
@@ -346,3 +346,11 @@ footer {
         border-radius: 12px;
         /* background-color: green; */
 }
+
+.speaker {
+        /* margin-left: 35px; */
+        font-size: 15px;
+        padding: 12px;
+        border-radius: 12px;
+        /* background-color: green; */
+}
