--- a/text_to_speech/templates/text_to_speech.html
+++ b/text_to_speech/templates/text_to_speech.html
@@ -19,12 +19,22 @@
                 <h2>Speech Synthesis</h2>
                 <div>
                         <textarea id="textarea-tts" rows="10" cols="80" style="resize: none;" ></textarea>
-                        <!-- <br> -->
+
                         <p>Selecione um Arquivo de Texto .txt</p>
                         <input class="click-to" id="buttonUploadTextFile" type="file" accept=".txt, .docx" />
+
                         <h2>Reprodução</h2>
+
                         <label id="rateValue">Velocidade 1</label> <input id="rate" type="range" min="0.1" max="2" step="0.1" value="1" />
                         <label id="pitchValue">Tonalidade 1</label> <input id="pitch" type="range" min="0.1" max="2" step="0.1" value="1" />
+
+                        <select class="speaker" name="selectPerson" id="speaker">
+                                <option value="pt-BR" selected>Português</option>
+                                <option value="en-CA">Inglês</option>
+                                <option value="fr-CA">Francês</option>
+                                <option value="es-ES">Espanhol</option>
+                        </select>
+
                         <button class="click-to" id="buttonListen" onclick="listen('textarea-tts')" >Clique para Ouvir</button>
                 </div>
         </div>
