--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -12,28 +12,25 @@
                 <div>
                     <img class="logo" src="{% static 'imgs/logo.png' %}" alt="logo Nexus">
                 </div>
-                <!-- <div>
-                    <h1>NEXUS - UFABC</h1>
-                </div> -->
             </div>  
     </header>
     <main>
         <div class="nexus">
-            <h2>NEXUS</h2>
-            <p>Realizamos trabalhos de pesquisa sobre a interseção de desafios emergentes (por exemplo, engenharia de sistemas complexos, sistemas de software aplicados) e questões sociais nas comunidades e organizações (por exemplo, sociedade e transformação de negócios). Para atingir esses objetivos, o grupo possui três linhas de pesquisa principais: Engenharia de Sistemas Complexos (CSE), Sistema de Software Aplicado (ASS) e Transformação de Sociedade e Negócios (SBT).</p>
+            <h2>Web_Speech_API</h2>
+            <p>The Web Speech API enables you to incorporate voice data into web apps. The Web Speech API has two parts: SpeechSynthesis (Text-to-Speech), and SpeechRecognition (Asynchronous Speech Recognition.)</p>
         </div>
     </main>
 
     <!--  -->
 
     <div id="grad-bottom"></div>
-    <div class="contato">
+    <div class="contact">
         <div>
-            <h3>QUER SABER MAIS SOBRE?</h3>
-            <p>Entre em contato, esclareça eventuais dúvidas.<br> Escreva pra gente! É rápido e fácil!</p>
+            <h3>WANNA KNOW MORE ABOUT?</h3>
+            <p>Get in touch, clarify certain doubts.<br> Write to us! It's quick and easy!</p>
         </div>
         <div class="but">
-            <a href="{% url 'contato' %}"><button class="saiba-mais" >Contato</button></a>
+            <a href="{% url 'contact' %}"><button class="saiba-mais" >Contact</button></a>
         </div>
     </div>
 
