--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -10,19 +10,16 @@
         <div class="header-div">
                 <div>
                     <div>
-                        <img class="logo-contato" src="{% static 'imgs/logo.png' %}" alt="logo GA">
+                        <img class="logo-contact" src="{% static 'imgs/logo.png' %}" alt="logo">
                     </div>
-                    <!-- <div>
-                        <h1>CONTATO</h1>
-                    </div> -->
                 </div>  
         </div>
 
-        <div class="divContatoForm">
+        <div class="divContactForm">
                 <form action="." method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <button class="btn-contato">Enviar</button>
+                        <button class="btn-contact">Send</button>
                 </form>
         </div>
 
