--- a/text_to_speech/templates/text_to_speech.html
+++ b/text_to_speech/templates/text_to_speech.html
@@ -10,7 +10,7 @@
         <div class="header-div">
                 <div>
                     <div>
-                        <img class="logo-contato" src="{% static 'imgs/logo.png' %}" alt="logo GA">
+                        <img class="logo-contact" src="{% static 'imgs/logo.png' %}" alt="logo GA">
                     </div>
                 </div>  
         </div>
@@ -20,22 +20,22 @@
                 <div>
                         <textarea id="textarea-tts" rows="10" cols="80" style="resize: none;" ></textarea>
 
-                        <p>Selecione um Arquivo de Texto .txt</p>
+                        <p>Upload an .txt file</p>
                         <input class="click-to" id="buttonUploadTextFile" type="file" accept=".txt, .docx" />
 
-                        <h2>Reprodução</h2>
+                        <h2>Replay</h2>
 
-                        <label id="rateValue">Velocidade 1</label> <input id="rate" type="range" min="0.1" max="2" step="0.1" value="1" />
-                        <label id="pitchValue">Tonalidade 1</label> <input id="pitch" type="range" min="0.1" max="2" step="0.1" value="1" />
+                        <label id="rateValue">Speed 1</label> <input id="rate" type="range" min="0.1" max="2" step="0.1" value="1" />
+                        <label id="pitchValue">Pitch 1</label> <input id="pitch" type="range" min="0.1" max="2" step="0.1" value="1" />
 
                         <select class="speaker" name="selectPerson" id="speaker">
-                                <option value="pt-BR" selected>Português</option>
-                                <option value="en-CA">Inglês</option>
-                                <option value="fr-CA">Francês</option>
-                                <option value="es-ES">Espanhol</option>
+                                <option value="pt-BR">Portuguese</option>
+                                <option value="en-CA" selected>English</option>
+                                <option value="fr-CA">French</option>
+                                <option value="es-ES">Spain</option>
                         </select>
 
-                        <button class="click-to" id="buttonListen" onclick="listen('textarea-tts')" >Clique para Ouvir</button>
+                        <button class="click-to" id="buttonListen" onclick="listen('textarea-tts')" >Listen</button>
                 </div>
         </div>
 
