--- a/speech_to_text/templates/speech_to_text.html
+++ b/speech_to_text/templates/speech_to_text.html
@@ -21,12 +21,16 @@
                         <textarea id="textarea-stt" rows="10" cols="80" disabled="true" style="resize: none;" ></textarea>
                         <button class="click-to" id="buttonSpeech" onclick="toggleStartStop()" ></button>
 
-                        <h2>Options</h2>
+                        <h2>Playback Options</h2>
 
                         <label id="rateValue">Speed 1</label> <input id="rate" type="range" min="0.1" max="2" step="0.1" value="1" />
                         <label id="pitchValue">Pitch 1</label> <input id="pitch" type="range" min="0.1" max="2" step="0.1" value="1" />
 
-                        <button class="click-to" id="buttonListen" onclick="listen('textarea-stt')" >Listen</button>
+                        <div class="flexButtons">
+                                <button class="click-to" id="buttonListen" onclick="listen('textarea-tts')" >Play</button>
+                                <button class="click-to" id="buttonPause" onclick="speechSynthesis.pause()" >Pause</button>
+                                <button class="click-to" id="buttonStop" onclick="speechSynthesis.cancel();" >Stop</button>
+                        </div>
                 </div>
         </div>
 
