--- a/text_to_speech/templates/text_to_speech.html
+++ b/text_to_speech/templates/text_to_speech.html
@@ -23,7 +23,7 @@
                         <p>Upload an .txt file</p>
                         <input class="click-to" id="buttonUploadTextFile" type="file" accept=".txt, .docx" />
 
-                        <h2>Replay</h2>
+                        <h2>Playback Options</h2>
 
                         <label id="rateValue">Speed 1</label> <input id="rate" type="range" min="0.1" max="2" step="0.1" value="1" />
                         <label id="pitchValue">Pitch 1</label> <input id="pitch" type="range" min="0.1" max="2" step="0.1" value="1" />
@@ -35,7 +35,11 @@
                                 <option value="es-ES">Spain</option>
                         </select>
 
-                        <button class="click-to" id="buttonListen" onclick="listen('textarea-tts')" >Listen</button>
+                        <div class="flexButtons">
+                                <button class="click-to" id="buttonListen" onclick="listen('textarea-tts')" >Play</button>
+                                <button class="click-to" id="buttonPause" onclick="speechSynthesis.pause()" >Pause</button>
+                                <button class="click-to" id="buttonStop" onclick="speechSynthesis.cancel();" >Stop</button>
+                        </div>
                 </div>
         </div>
 
